[package]
name = "dv_os"
version = "0.0.1"
authors = ["Divy Jain <dkj@somaiya.edu>"]
edition = "2018"

[dependencies]
rlibc = "1.0.0"
bootloader = "0.9.8"
volatile = "0.3.0"
spin = "0.5.2"
x86_64 = "0.11.4"
uart_16550 = "0.2.7"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"]
test-success-exit-code = 33
test-timeout = 300

[[test]]
name = "should_panic"
harness = false
